--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="/">
+  <base href="/test_mapapseli/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -47,5 +47,6 @@
   </script>
   <script src="flutter_bootstrap.js" async></script>
 </body>
+
 
 </html>
