--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-  <!--
+  <head>
+    <!--
     If you are serving your web app in a path other than the root, change the
     href value below to reflect the base path you are serving from.
 
@@ -15,38 +14,37 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="/test_mapapseli/">
+    <base href="/test_mapap/" />
 
-  <meta charset="UTF-8">
-  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Управление временем через игру">
-  <meta name="theme-color" content="#73CDEC">
-  <link rel="stylesheet" type="text/css" href="styles.css">
+    <meta charset="UTF-8" />
+    <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
+    <meta name="description" content="Управление временем через игру" />
+    <meta name="theme-color" content="#73CDEC" />
 
-  <!-- iOS meta tags & icons -->
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Мапапсели">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+    <!-- iOS meta tags & icons -->
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-title" content="Мапапсели" />
+    <link rel="apple-touch-icon" href="icons/Icon-192.png" />
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
 
-  <title>mapapseli</title>
-  <link rel="manifest" href="manifest.json">
-</head>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="favicon.png" />
 
-<body>
-  <div id="loading-screen" class="loading-screen">
-    <div class="spinner"></div>
-  </div>
-  <script>
-    window.addEventListener('load', () => {
-      document.getElementById('loading-screen').style.display = 'none';
-    });
-  </script>
-  <script src="flutter_bootstrap.js" async></script>
-</body>
+    <title>Мапапсели</title>
+    <link rel="manifest" href="manifest.json" />
+  </head>
 
-
+  <body>
+    <div id="loading-screen" class="loading-screen">
+      <div class="spinner"></div>
+    </div>
+    <script>
+      window.addEventListener("load", () => {
+        document.getElementById("loading-screen").style.display = "none";
+      });
+    </script>
+    <script src="flutter_bootstrap.js" async></script>
+  </body>
 </html>
