--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-    <base href="/test_mapap/" />
+    <base href="/test_mapapseli/" />
 
     <meta charset="UTF-8" />
     <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
@@ -48,3 +48,4 @@
     <script src="flutter_bootstrap.js" async></script>
   </body>
 </html>
+
